--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <p class="red-class">Number 1 - I'm a class!</p>
-    <div id="blue-number">Number 2 - I'm one ID.</div>
-    <p class="red-class bigger">Number 3 - I'm a class, but cooler!</p>
-    <div id="green-number">Number 4 - I'm another ID.</div>
-    <p class="red-class">Number 5 - I'm a class!</p>
+    <p class="odd">Number 1 - I'm a class!</p>
+    <div id="two">Number 2 - I'm one ID.</div>
+    <p class="odd bigger">Number 3 - I'm a class, but cooler!</p>
+    <div class="bigger" id="four">Number 4 - I'm another ID.</div>
+    <p class="odd">Number 5 - I'm a class!</p>
   </body>
 </html>
-
